fixed double scroll bug

--- a/frontend/interview-prepper/src/app/app.component.css
+++ b/frontend/interview-prepper/src/app/app.component.css
@@ -5,29 +5,59 @@
 }
 
 .mat-toolbar {
+  color: antiquewhite;
+  background-color: rgba(70, 70, 70, 0.9);
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   z-index: 1000; /* Ensure it stays on top */
   height: 64px;
+  border-bottom: 2px black;
 }
 
 .mat-sidenav-container {
   height: 100vh;
-  margin-top: 64px;
+  /* margin-top: 64px; */
+  background-color: rgb(149, 203, 219);
+  overflow: hidden;
 }
 
 
 .mat-sidenav-content {
-  padding-top: 0; /* Adjust 64px to your toolbar's height */
+  padding-top: 0;
   min-height: 100vh;
+  margin-top: 64px;
+  
+  overflow-y: auto;
 }
 
 .content {
-  margin-top: 64px; /* Adjust according to your toolbar height */
+  margin-top: 64px;
 }
 
 .spacer {
   flex: 1 1 auto;
+}
+
+.container {
+  max-height: calc(100vh - 64px);
+  overflow-y: auto;
+}
+
+.form-container {
+  overflow-y: auto;
+}
+
+.content-container {
+  max-height: calc(100vh - 64px);
+  overflow-y: auto;
+}
+
+.sidenav {
+  background-color: rgb(140, 179, 190);
+}
+
+a {
+  color: aliceblue;
 }
