--- a/frontend/interview-prepper/src/app/interview-calendar/interview-calendar.component.css
+++ b/frontend/interview-prepper/src/app/interview-calendar/interview-calendar.component.css
@@ -4,6 +4,13 @@
 
 button {
   margin-bottom: 10px;
+  color: #f0f0f0;
+  background-color: rgb(56, 161, 126);
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  font-size: 0.875rem;
+  transition: background-color 0.15s ease-in-out;
 }
 
 .custom-event {
