--- a/frontend/interview-prepper/src/app/login/login.component.css
+++ b/frontend/interview-prepper/src/app/login/login.component.css
@@ -4,6 +4,7 @@
   padding: 3rem;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: lightcyan;
 }
 
 h2 {
